--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
   </div>
 <div id="message">
-  <p>Tillykke! Du vandt! <p/>
-  <button> Slut spillet<button>
+  <p>Tillykke! Du vandt! </p>
+  <button> Slut spillet</button>
 </div>
   
   
